--- a/25.svg.html
+++ b/25.svg.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .p{
-            font-size: ;
-            fort
-        }
+
+        
     </style>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam beatae odio corporis obcaecati animi similique saepe, illo suscipit, voluptas vero molestias. Aliquam quidem vitae veniam dignissimos modi minus fugit accusantium?
-        ctlorem200
-    </p>
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
         <title>heart</title>
         <path d="M23.6 2c-3.363 0-6.258 2.736-7.599 5.594-1.342-2.858-4.237-5.594-7.601-5.594-4.637 0-8.4 3.764-8.4 8.401 0 9.433 9.516 11.906 16.001 21.232 6.13-9.268 15.999-12.1 15.999-21.232 0-4.637-3.763-8.401-8.4-8.401z"></path>
         </svg>
+
+        <svg class="icon-home">
+            <use xlink:href="symbol-defs.svg#icon-home"></use>
+          </svg>
+          
 </body>
 </html>
